fixing justify-alignment on product section

--- a/resources/style.css
+++ b/resources/style.css
@@ -1,23 +1,29 @@
 /* fonts */
 
 @font-face {
-    font-family: 'Bebas Neue';
-    font-style: normal;
-    font-weight: 400;
-    src: url(https://fonts.gstatic.com/s/bebasneue/v2/JTUSjIg69CK48gW7PXoo9Wlhyw.woff2) format('woff2');
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-  }
+  font-family: "Bebas Neue";
+  font-style: normal;
+  font-weight: 400;
+  src: url(https://fonts.gstatic.com/s/bebasneue/v2/JTUSjIg69CK48gW7PXoo9Wlhyw.woff2)
+    format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+    U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
+    U+FEFF, U+FFFD;
+}
 
 @font-face {
-    font-family: 'Roboto Condensed';
-    font-style: normal;
-    font-weight: 400;
-    src: url(https://fonts.gstatic.com/s/robotocondensed/v19/ieVl2ZhZI2eCN5jzbjEETS9weq8-19K7DQ.woff2) format('woff2');
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-  }
+  font-family: "Roboto Condensed";
+  font-style: normal;
+  font-weight: 400;
+  src: url(https://fonts.gstatic.com/s/robotocondensed/v19/ieVl2ZhZI2eCN5jzbjEETS9weq8-19K7DQ.woff2)
+    format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+    U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
+    U+FEFF, U+FFFD;
+}
 
 body {
-    font-family: 'Roboto Condensed', sans-serif;
+  font-family: "Roboto Condensed", sans-serif;
 }
 
 h1,
@@ -26,43 +32,42 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: 'Bebas Neue', cursive;
+  font-family: "Bebas Neue", cursive;
 }
-
 
 /* universal */
 
 .main-content {
-position: relative;
-top: 7.3125rem
+  position: relative;
+  top: 7.3125rem;
 }
 
 .center {
-    text-align: center;
+  text-align: center;
 }
 
 /* header */
 
 header {
-    position: fixed;
-    width: 100%;
-    background-color: rgba(126, 144, 148, .95);
-    z-index: 10;
+  position: fixed;
+  width: 100%;
+  background-color: rgba(126, 144, 148, 0.95);
+  z-index: 10;
 }
 
 header .content {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
 ul {
-    list-style: none;
+  list-style: none;
 }
 
 li {
-    margin: .5rem auto;
-    border: 1px solid rgb(126, 144, 148);
+  margin: 0.5rem auto;
+  border: 1px solid rgb(126, 144, 148);
 }
 
 /*
@@ -74,118 +79,111 @@ li {
 */
 
 .logo img {
-    height: 6.5rem;
-    border-radius: 50%;
+  height: 6.5rem;
+  border-radius: 50%;
 }
 
 /* banner */
 
 .banner {
-    background-image: url("https://images.unsplash.com/photo-1593328125760-2a9bf6288fb2?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1469&q=80");
-    background-repeat: no-repeat;
-    background-position: center;
-    height: 25rem;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+  background-image: url("https://images.unsplash.com/photo-1593328125760-2a9bf6288fb2?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1469&q=80");
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 25rem;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .banner h2 {
-    background-color: rgba(230, 242, 245, 0.6);
-    padding: .2rem 1.5rem;
+  background-color: rgba(230, 242, 245, 0.6);
+  padding: 0.2rem 1.5rem;
 }
 
 .banner-box {
-    background-color: rgba(126, 144, 148, .60);
-    padding: .2rem 1rem;
+  background-color: rgba(126, 144, 148, 0.6);
+  padding: 0.2rem 1rem;
 }
-
-
-
 
 /* products section*/
 
 .products {
-    display: flex;
-    justify-content: space-around;
-    
+  display: flex;
+  justify-content: space-around;
 }
 
 .product .box {
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    width: 150px;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  width: 150px;
 }
 
 .box {
-    width: 30%;
+  width: 30%;
 }
 
 .product img {
-    max-width: 95%;
+  max-width: 95%;
 }
 
 @media only screen and (max-width: 860px) {
-    .products {
-      flex-flow: column;
-      justify-content: center;
-      padding: 0;
-    }
+  .products {
+    flex-flow: column;
+    justify-content: center;
+    padding: 0;
+  }
 
-    .product .box {
-        margin: .6rem auto;
-    }
+  .product .box {
+    margin: 0.6rem auto;
+  }
 }
-
-
 
 /* team section */
 
 #team-section {
-    background-color: rgba(230, 242, 245, 0.9);
-    display: flex;
-    padding: 3rem 3% 1rem 3%;
-    justify-content: space-around;
+  background-color: rgba(230, 242, 245, 0.9);
+  display: flex;
+  padding: 3rem 3% 1rem 3%;
+  justify-content: space-around;
 }
 
 .teammember {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    margin: 1rem .5rem;
-    padding: .8rem 1.4rem;
-    background-color: rgba(126, 144, 148, .90);
-    border: 1px solid rgba(126, 144, 148, 1);
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  margin: 1rem 0.5rem;
+  padding: 0.8rem 1.4rem;
+  background-color: rgba(126, 144, 148, 0.9);
+  border: 1px solid rgba(126, 144, 148, 1);
 }
 
 .teammember .box {
-    margin: 0 1rem;
-    width: 30%;
+  margin: 0 1rem;
+  width: 30%;
 }
 
 .teammember img {
-    max-width: 95%;
-    height: 15rem;
+  max-width: 95%;
+  height: 15rem;
 }
 
 @media only screen and (max-width: 860px) {
-    #team-section {
-      flex-flow: column;
-      justify-content: center;
-      padding: 0;
-    }
+  #team-section {
+    flex-flow: column;
+    justify-content: center;
+    padding: 0;
+  }
 
-    .teammember {
-        margin: .6rem auto;
-    }
+  .teammember {
+    margin: 0.6rem auto;
+  }
 }
-
 
 /* contact locations section */
 
 #contact {
-    display: flex;
-    justify-content: space-around;
-    background-color: rgba(126, 144, 148, .90);
+  display: flex;
+  justify-content: space-around;
+  background-color: rgba(126, 144, 148, 0.9);
 }
